NJU-ProjectN/am-kernels ics2021 initialized without tracing
NJU-ProjectN/am-kernels c4088239e2425ffcb3cccd0fd603872d6c745fbb bad-apple: fix bug of channel number and audio_left

--- a/nemu/Kconfig
+++ b/nemu/Kconfig
@@ -151,6 +151,11 @@ config ITRACE_COND
   string "Only trace instructions when the condition is true"
   default "true"
 
+config CONFIG_WATCHPOINT
+  depends on TRACE
+  string "enable watchpoint"
+  default "true"
+
 
 config DIFFTEST
   depends on TARGET_NATIVE_ELF
